Fix checkbox spacing

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -47,7 +47,7 @@ code {
       color: #9baec8;
       display: block;
     }
-    
+
     label.checkbox {
       position: relative;
 	    padding-left: 25px;
@@ -56,7 +56,8 @@ code {
     input[type=checkbox] {
 	    position: absolute;
 	    left: 0;
-      top: 0;
+      top: 1px;
+      margin: 0;
     }
   }
 
